Configurar ambiente Eclipse com JavaFX - Guia completo
Passo a passo detalhado para baixar e configurar o projeto UberLand no Eclipse com JavaFX:

## 🎯 O que foi adicionado:
1. Guia completo para baixar projeto direto do GitHub (sem Git Bash/CMD)
2. Configuração do JavaFX no Eclipse passo a passo
3. Solução de problemas comuns (module-info.java, VM arguments)
4. Checklist final para verificar configuração

## 🔧 Principais seções:
- 📥 Baixar projeto do GitHub via ZIP
- 🛠️ Importar no Eclipse
- ⚙️ Configurar JavaFX SDK
- 🔧 VM Arguments necessários
- 📝 Ajustar module-info.java
- 🚀 Rodar projeto
- ⚠️ Solução de problemas

## 💡 Dicas importantes:
- Caminhos sem espaços para JavaFX
- Compatibilidade JDK + JavaFX
- Verificação de dependências